log
Thu Apr  7 11:54:10 HSP 2022: 
 hashmap.c | 47 ++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 46 insertions(+), 1 deletion(-)
 tests:  0|0
68105bc
Thu Apr  7 11:54:42 HSP 2022: 
 tests:  0|0
d1269ee
Thu Apr  7 11:56:23 HSP 2022: 
 tests:  0|0
792c724
Thu Apr  7 11:59:20 HSP 2022: 
 tests:  0|0
a382851
Thu Apr  7 12:00:12 HSP 2022: 
 tests:  0|0
af5c632
Thu Apr  7 12:05:43 HSP 2022: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:96:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return &Map;
            ^~~~
hashmap.c:96:12: error: function returns address of local variable [-Werror=return-local-addr]
cc1.exe: all warnings being treated as errors
Compilation failed
8bcb02a
Thu Apr  7 12:05:52 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5b64473
Thu Apr  7 12:07:02 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6326d8d
Thu Apr  7 12:12:48 HSP 2022: 
 hashmap.c | 20 +++++---------------
 1 file changed, 5 insertions(+), 15 deletions(-)
 tests:  6|4
total_score: 30/70
d364622
Fri Apr  8 14:39:32 HSP 2022: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:99:15: error: statement with no effect [-Werror=unused-value]
            map->size;
            ~~~^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1bf6955
Fri Apr  8 14:39:46 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
95f3849
Fri Apr  8 14:49:38 HSP 2022: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  11|3
total_score: 40/70
e29b10d
Fri Apr  8 14:50:48 HSP 2022: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  11|3
total_score: 40/70
08fa625
Fri Apr  8 14:52:02 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|3
total_score: 40/70
f1f63bc
Fri Apr  8 14:53:05 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|3
total_score: 40/70
a67c6ae
Fri Apr  8 15:06:26 HSP 2022: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
12cd891
Fri Apr  8 20:42:06 HSP 2022: 
 hashmap.c | 9 ---------
 1 file changed, 9 deletions(-)
 tests:  11|3
total_score: 40/70
c1e14aa
Fri Apr  8 20:42:42 HSP 2022: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:72:9: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     aux = map->buckets;
         ^
hashmap.c:71:13: error: variable 'aux' set but not used [-Werror=unused-but-set-variable]
     Pair ***aux = (Pair***) malloc(sizeof(Pair**));
             ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
a35b3a0
Fri Apr  8 20:46:05 HSP 2022: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:77:25: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         map->buckets[i] = aux[i];
                         ^
cc1.exe: all warnings being treated as errors
Compilation failed
2dfdd63
Fri Apr  8 20:47:45 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:72:12: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     aux[0] = &map->buckets;
            ^
hashmap.c:77:22: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         map->buckets = aux;
                      ^
cc1.exe: all warnings being treated as errors
Compilation failed
59a5b87
Fri Apr  8 20:50:07 HSP 2022: 
 hashmap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  11|3
total_score: 40/70
cd2f934
Fri Apr  8 20:52:32 HSP 2022: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:79:9: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map = (Pair**) realloc (map, sizeof(map->capacity));
         ^
cc1.exe: all warnings being treated as errors
Compilation failed
5ce0b45
Fri Apr  8 20:52:53 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2f794ff
Fri Apr  8 20:54:20 HSP 2022: 
 hashmap.c | 14 --------------
 1 file changed, 14 deletions(-)
 tests:  11|3
total_score: 40/70
9375ddf
Fri Apr  8 20:59:58 HSP 2022: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|0
5a15175
Fri Apr  8 21:00:48 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1157fc0
Fri Apr  8 21:01:12 HSP 2022: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
7221f87
Fri Apr  8 21:01:45 HSP 2022: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:79:37: error: passing argument 1 of 'calloc' makes integer from pointer without a cast [-Werror=int-conversion]
     map->buckets = (Pair**) calloc (map->buckets, sizeof(Pair*) * map->capacity);
                                     ^~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:484:40: note: expected 'size_t {aka unsigned int}' but argument is of type 'Pair ** {aka struct Pair **}'
 _CRTIMP __cdecl __MINGW_NOTHROW  void *calloc (size_t, size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d0cf8a8
Fri Apr  8 21:02:05 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|3
total_score: 40/70
795d98c
Fri Apr  8 21:04:07 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:83:40: error: '*aux' is a pointer; did you mean to use '->'?
         insertMap(map, aux[i]->key, aux->value);
                                        ^~
                                        ->
Compilation failed
e0b6dfa
Fri Apr  8 21:04:28 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1bd88e6
Fri Apr  8 21:07:08 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:83:47: error: incompatible types when assigning to type 'HashMap {aka struct HashMap}' from type 'Pair * {aka struct Pair *}'
         map[hash(aux[i]->key, map->capacity)] = aux[i];
                                               ^
Compilation failed
6176168
Fri Apr  8 21:07:26 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d4e2345
Fri Apr  8 21:09:32 HSP 2022: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
2010295
Fri Apr  8 21:10:43 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  14|1
total_score: 60/70
4e76e8d
Fri Apr  8 22:26:40 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
214d090
